--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ textarea:focus {
 header {
 	/* background: url(images/bg.jpg) 50% 0 no-repeat fixed;*/
 	background-size: cover;
-	background-color: #FAFAFA;
+	background-color: #0091EA;
 	color: #0091EA;
 }
 .top .photo-slide {
